[package]
name = "smmdb"
version = "0.1.0"
authors = ["Mario Reder <mreder1289@gmail.com>"]
edition = "2018"

[dependencies]
actix-cors = "0.2"
actix-http = { version = "1.0", features = [ "rustls" ] }
actix-service = "1.0"
actix-session = "0.3"
actix-web = "2"
actix-rt = "1"
awc = "1"
brotli2 = "0.3"
bson ="0.14"
cemu-smm = "4.0.26"
compression = "0.1"
chrono = "0.4"
env_logger = "0.7"
failure = "0.1"
futures = "0.3"
image = "0.23"
itertools = "0.9"
mongodb = { package = "mongodb_cwal", version = "0.6" }
num_cpus = "1.13"
protobuf = "2.14"
rand = "0.7"
rayon = "1.3"
serde = "1"
serde_json = "1"
tar = "0.4"
twox-hash = "1.5"

[dependencies.serde_qs]
git = "https://github.com/Tarnadas/serde_qs"
features = ["actix"]

[profile]
[profile.release]
debug = false
# lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
