[package]
name = "smmdb"
version = "0.1.0"
authors = ["Mario Reder <mreder1289@gmail.com>"]
edition = "2018"

[dependencies]
actix-cors = "0.2"
actix-http = { version = "1", features = [ "rustls" ] }
actix-service = "1"
actix-session = "0.3"
actix-web = "2"
actix-rt = "1"
awc = "1"
brotli2 = "0.3"
bson = "0.14"
chrono = "0.4"
env_logger = "0.7"
failure = "0.1"
flate2 = "1"
futures = "0.3"
image = "0.23"
itertools = "0.9"
mongodb = { package = "mongodb_cwal", version = "0.6" }
num_cpus = "1"
protobuf = "2"
rand = "0.7"
rayon = "1"
regex = "1"
serde = "1"
serde_json = "1"
serde_qs = { version = "0.7", features = ["actix"] }
smmdb-lib = { version = "1", package = "smmdb" }
tar = "0.4"
twox-hash = "1"

[profile]
[profile.release]
debug = false
# lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
