[package]
name = "smmdb-common"
version = "0.1.0"
authors = ["Mario Reder <mreder1289@gmail.com>"]
edition = "2018"

[dependencies]
bson = "0.14"
chrono = "0.4"
serde = "1"
serde_json = "1"
smmdb-auth = { path = "../smmdb-auth" }
smmdb-lib = { version = "1", package = "smmdb" }
twox-hash = "1"

[profile]
[profile.release]
debug = false
# lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
