[package]
name = "smmdb-db"
version = "0.1.0"
authors = ["Mario Reder <mreder1289@gmail.com>"]
edition = "2018"

[dependencies]
brotli2 = "0.3"
bson = "0.14"
mongodb = { package = "mongodb_cwal", version = "0.6" }
serde_json = "1"
smmdb-lib = { version = "2", package = "smmdb", git = "https://github.com/Tarnadas/smmdb-lib.git" }
