[package]
name = "smmdb"
version = "0.1.0"
authors = ["Mario Reder <mreder1289@gmail.com>"]
edition = "2018"

[dependencies]
actix-cors = "0.3"
actix-http = { version = "2", features = [ "rustls" ] }
actix-service = "1"
actix-session = "0.4"
actix-web = "3"
actix-rt = "1"
awc = "2"
brotli2 = "0.3"
bson = "0.14"
env_logger = "0.7"
failure = "0.1"
flate2 = "1"
futures = "0.3"
image = "0.23"
mongodb = { package = "mongodb_cwal", version = "0.6" }
num_cpus = "1"
protobuf = "2"
rand = "0.7"
rayon = "1"
regex = "1"
serde = "1"
serde_json = "1"
serde_qs = { version = "0.7", features = ["actix"], git = "https://github.com/Tarnadas/serde_qs.git" }
smmdb-auth = { path = "../smmdb-auth" }
smmdb-common = { path = "../smmdb-common" }
smmdb-db = { path = "../smmdb-db" }
smmdb-lib = { version = "1", package = "smmdb" }
tar = "0.4"
