[package]
name = "smmdb-auth"
version = "0.1.0"
authors = ["Mario Reder <mreder1289@gmail.com>"]
edition = "2018"

[dependencies]
actix-http = { version = "2", features = [ "rustls" ] }
actix-web = "3"
bson = "1"
chrono = "0.4"
futures = "0.3"
paperclip = { version = "0.5", features = ["actix-nightly", "serde_qs"] }
rand = "0.8"
serde = "1"
thiserror = "1"
