[package]
name = "smmdb-common"
version = "0.1.0"
authors = ["Mario Reder <mreder1289@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
bson = "1"
chrono = "0.4"
paperclip = { version = "0.5", features = ["actix-nightly", "serde_qs"] }
serde = "1"
serde_json = "1"
smmdb-auth = { path = "../smmdb-auth" }
smmdb-db = { path = "../smmdb-db" }
smmdb-lib = { version = "2", package = "smmdb", git = "https://github.com/Tarnadas/smmdb-lib.git" }
twox-hash = "1"
