[package]
name = "smmdb"
version = "0.1.0"
authors = ["Mario Reder <mreder1289@gmail.com>"]
edition = "2018"

[dependencies]
actix-cors = "0.5"
actix-http = { version = "2", features = [ "rustls" ] }
actix-session = "0.4"
actix-web = "3"
anyhow = "1"
awc = "2"
brotli2 = "0.3"
bson = "1"
env_logger = "0.8"
flate2 = "1"
futures = "0.3"
image = "0.23"
mongodb = "1"
num_cpus = "1"
paperclip = { version = "0.5", features = ["actix-nightly", "actix-session", "serde_qs"] }
parking_lot = "0.11"
protobuf = "2"
rand = "0.8"
rayon = "1"
regex = "1"
serde = "1"
serde_json = "1"
serde_qs = { version = "0.8", features = ["actix"] }
smmdb-auth = { path = "../smmdb-auth" }
smmdb-common = { path = "../smmdb-common" }
smmdb-db = { path = "../smmdb-db" }
smmdb-lib = { version = "2", package = "smmdb", git = "https://github.com/Tarnadas/smmdb-lib.git" }
tar = "0.4"
thiserror = "1"
zstd = "0.7"
